--- a/v1/styles.css
+++ b/v1/styles.css
@@ -1,15 +1,22 @@
+:root {
+    color:#53cf2e ;
+}
+
+html {
+    background-color: rgb(24, 24, 24);
+}
 body {
     text-align: center;
     font-family: Arial, sans-serif;
 }
 
 h1 {
-    color: #FF0000;
+    color: #53cf2e;
 }
 
 button {
-    background-color: #000;
-    color: #FF0000;
+    background-color: #320203;
+    color: #cf3a54;
     padding: 10px 20px;
     border: none;
     margin: 10px;
@@ -17,6 +24,12 @@ button {
 }
 
 #resources {
-    margin-top: 20px;
-    color: #00FF00;
+    margin-top: 10px;
+    margin-left: 40%;
+    margin-right: 40%;
+    color: #53cf2e;
+    background-color: rgb(24, 24, 24);
+    padding: 10px;
+    border: 5px solid black;
+    text-align: left;
 }
