--- a/v1/styles.css
+++ b/v1/styles.css
@@ -1,13 +1,12 @@
 :root {
     color:#53cf2e ;
 }
-
-html {
-    background-color: rgb(24, 24, 24);
-}
 body {
     text-align: center;
     font-family: Arial, sans-serif;
+    background-color: #181818;
+    background-image: url("lesbianhex.png");
+    background-repeat: repeat;
 }
 
 h1 {
@@ -17,8 +16,7 @@ h1 {
 /* Style the tab */
 .tab {
     overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
+    background-color: #000000;
 } 
   /* Style the buttons that are used to open the tab content */
 .tab button {
@@ -28,22 +26,20 @@ h1 {
     outline: none;
     cursor: pointer;
     padding: 14px 16px;
-    transition: 0.3s;
 }  
   /* Change background color of buttons on hover */
 .tab button:hover {
-    background-color: #ddd;
+    background-color: #320203;
 }  
   /* Create an active/current tablink class */
 .tab button.active {
-    background-color: #ccc;
+    background-color: #320203;
 }  
 
   /* Style the tab content */
 .tabContent {
     display: none;
     padding: 6px 12px;
-    border: 1px solid #ccc;
     border-top: none;
 }
 button {
@@ -60,7 +56,6 @@ button {
     margin-left: 40%;
     margin-right: 40%;
     color: #53cf2e;
-    background-color: rgb(24, 24, 24);
     padding: 10px;
     border: 5px solid black;
     text-align: left;
