--- a/v1/styles.css
+++ b/v1/styles.css
@@ -4,8 +4,8 @@
 body {
     text-align: center;
     font-family: Arial, sans-serif;
-    background-color: #181818;
-    background-image: url("lesbianhex.png");
+    background-color: #1a1e36;
+    /*background-image: url("lesbianhex.png");*/
     background-repeat: repeat;
 }
 
